Fix hidden horizontal scrollbar in dev panels

--- a/src/goupile/client/dev.css
+++ b/src/goupile/client/dev.css
@@ -35,7 +35,7 @@
     left: 0;
     top: 2.5em;
     width: 50%;
-    height: calc(100% - 2.5em);
+    height: calc(100% - 5em);
     box-sizing: border-box;
     z-index: 999;
     overflow: auto;
@@ -52,7 +52,7 @@
     left: 0;
     top: 2.5em;
     width: 100%;
-    height: calc(100% - 2.5em);
+    height: calc(100% - 5em);
     box-sizing: border-box;
     z-index: 999;
     overflow: auto;
